auth guard changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -418,7 +418,7 @@
     <div class="container-fluid">
       <div class="card">
           <div class="card-header card-header-danger">
-              <h4 class="card-title">Bhaki Security amd Training</h4>
+              <h4 class="card-title">Bhaki Security and Training</h4>
               <p class="card-category">Security training acedemy</p>
           </div>
           <div class="card-body">
