--- a/src/assets/scss/core/variables/_buttons.scss
+++ b/src/assets/scss/core/variables/_buttons.scss
@@ -66,7 +66,7 @@ $btn-rose-bg:                    $brand-rose !default;
 $btn-rose-border-color:              $btn-rose-bg !default;
 
 $btn-default-color:                 #fff !default;
-$btn-default-bg:                    $gray-color !default;
+$btn-default-bg:                    $bhaki !default;
 $btn-default-border-color:              $btn-default-bg !default;
 //
 $btn-link-disabled-color:        $gray-light !default;
