--- a/src/assets/scss/core/variables/_colors.scss
+++ b/src/assets/scss/core/variables/_colors.scss
@@ -14,6 +14,9 @@ $red-a400: #ff1744 !default;
 $red-a700: #d50000 !default;
 $red: $red-500 !default;
 
+$bhaki-50: #811119 !default;
+$bhaki-100: #530107 !default;
+
 $pink-50: #fce4ec !default;
 $pink-100: #f8bbd0 !default;
 $pink-200: #f48fb1 !default;
@@ -308,7 +311,7 @@ $white: #fff;
 // New colors
 $gray-color:  #999999 !default;
 $black-color: #3C4858 !default;
-
+$bhaki: #530107 !default;
 $black: #000000; $rgb-black: "0,0,0" !default;
 $white: #ffffff; $rgb-white: "255,255,255" !default;
 
