--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,33 +1,30 @@
-<!-- <div class="main-content">
+<div class="main-content">
   <div class="container-fluid">
        <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-danger card-header-icon">
+                    <div class="card-icon bg-danger">
+                        <i class="material-icons">store</i>
+                    </div>
+                    <p class="card-category">Johannesburg</p>
+                    <h3 class="card-title">1500</h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">date_range</i> Last 24 Hours
+                    </div>
+                </div>
+            </div>
+        </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
-                  <div class="card-header card-header-warning card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">content_copy</i>
-                      </div>
-                      <p class="card-category">Used Space</p>
-                      <h3 class="card-title">49/50
-                          <small>GB</small>
-                      </h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons text-danger">warning</i>
-                          <a href="javascript:void(0)">Get More Space...</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-success card-header-icon">
+                  <div class="card-header card-header-danger card-header-icon">
                       <div class="card-icon">
                           <i class="material-icons">store</i>
                       </div>
-                      <p class="card-category">Revenue</p>
-                      <h3 class="card-title">$34,245</h3>
+                      <p class="card-category">Polokwane</p>
+                      <h3 class="card-title">70</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
@@ -37,48 +34,49 @@
               </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-danger card-header-icon">
-                      <div class="card-icon">
-                          <i class="material-icons">info_outline</i>
-                      </div>
-                      <p class="card-category">Fixed Issues</p>
-                      <h3 class="card-title">75</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">local_offer</i> Tracked from Github
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                  <div class="card-header card-header-info card-header-icon">
-                      <div class="card-icon">
-                          <i class="fa fa-twitter"></i>
-                      </div>
-                      <p class="card-category">Followers</p>
-                      <h3 class="card-title">+245</h3>
-                  </div>
-                  <div class="card-footer">
-                      <div class="stats">
-                          <i class="material-icons">update</i> Just Updated
-                      </div>
-                  </div>
-              </div>
-          </div>
+            <div class="card card-stats">
+                <div class="card-header card-header-danger card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">store</i>
+                    </div>
+                    <p class="card-category">Cape Town</p>
+                    <h3 class="card-title">1000</h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">date_range</i> Last 24 Hours
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card card-stats">
+                <div class="card-header card-header-danger card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">store</i>
+                    </div>
+                    <p class="card-category">Mpumalanga</p>
+                    <h3 class="card-title">600</h3>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">date_range</i> Last 24 Hours
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
       <div class="row">
           <div class="col-md-4">
               <div class="card card-chart">
-                  <div class="card-header card-header-success">
-                      <div class="ct-chart" id="dailySalesChart"></div>
+                  <div class="card-header card-header-danger">
+                      <div class="ct-chart" id="dailyRegistrationChart"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Daily Sales</h4>
+                      <h4 class="card-title">Daily Registrations</h4>
                       <p class="card-category">
-                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
+                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today registrations.
+                        </p>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
@@ -89,22 +87,24 @@
           </div>
           <div class="col-md-4">
               <div class="card card-chart">
-                  <div class="card-header card-header-warning">
-                      <div class="ct-chart" id="websiteViewsChart"></div>
+                  <div class="card-header card-header-danger">
+                      <div class="ct-chart" id="MonthlyRegistrationChart"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Email Subscriptions</h4>
-                      <p class="card-category">Last Campaign Performance</p>
+                      <h4 class="card-title">Monthly Registrations</h4>
+                      <p class="card-category">
+                        <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today registrations.
+                      </p>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
+                          <i class="material-icons">access_time</i> updated 4 minutes ago
                       </div>
                   </div>
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card card-chart">
+              <!-- <div class="card card-chart">
                   <div class="card-header card-header-danger">
                       <div class="ct-chart" id="completedTasksChart"></div>
                   </div>
@@ -117,11 +117,11 @@
                           <i class="material-icons">access_time</i> campaign sent 2 days ago
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
       </div>
       <div class="row">
-          <div class="col-lg-6 col-md-12">
+          <!-- <div class="col-lg-6 col-md-12">
               <div class="card">
                   <div class="card-header card-header-tabs card-header-primary">
                       <div class="nav-tabs-navigation">
@@ -365,16 +365,16 @@
                       </div>
                   </div>
               </div>
-          </div>
+          </div> -->
           <div class="col-lg-6 col-md-12">
               <div class="card">
-                  <div class="card-header card-header-warning">
-                      <h4 class="card-title">Employees Stats</h4>
-                      <p class="card-category">New employees on 15th September, 2016</p>
+                  <div class="card-header card-header-danger">
+                      <h4 class="card-title">Latest Registrations</h4>
+                      <p class="card-category">New registrations on September, 2023</p>
                   </div>
                   <div class="card-body table-responsive">
                       <table class="table table-hover">
-                          <thead class="text-warning">
+                          <thead class="text-danger">
                               <th>ID</th>
                               <th>Name</th>
                               <th>Salary</th>
@@ -412,9 +412,9 @@
           </div>
       </div> 
   </div>
-</div> -->
+</div>
 
-<div class="main-content">
+<!-- <div class="main-content">
     <div class="container-fluid">
       <div class="card">
           <div class="card-header card-header-danger">
@@ -425,7 +425,7 @@
               <div id="typography">
                   <div class="card-title">
                       <h2>Welcome...</h2>
-                  </div>
+                  </div> -->
                   <!-- <div class="row">
                       <div class="tim-typo">
                           <h1>
@@ -508,8 +508,8 @@
                           </h2>
                       </div>
                   </div> -->
-              </div>
+              <!-- </div>
           </div>
       </div>
   </div>
-  
+   -->
