--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-8">
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">Registration</h4>
@@ -90,30 +90,38 @@
                                 </mat-form-field>
                               </div>
                           </div>
-                         
-                          <button mat-raised-button type="submit" class="btn btn-info pull-right button"  (click)="createRegistration()">Submit</button>
+                          <button mat-raised-button type="submit" class="btn btn-submit pull-right button  btn-round"  (click)="createRegistration()">Submit</button>
+                          <!-- <button mat-raised-button type="submit" class="btn btn-cancel pull-right button  btn-round"  (click)="createRegistration()">Cancel</button> -->
+                          
                           <div class="clearfix"></div>
                       </form>
                   </div>
               </div>
           </div>
-          <!-- <div class="col-md-4">
+          <div class="col-md-4">
               <div class="card card-profile">
                   <div class="card-avatar">
                       <a href="javascript:void(0)">
+                        <span>TM</span>
                           <img class="img" src="./assets/img/faces/marc.jpg" />
                       </a>
                   </div>
                   <div class="card-body">
-                      <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-                      <h4 class="card-title">Alec Thompson</h4>
+                    <h4 class="card-title">Thabo Makwea</h4>
+                      <h6 class="card-category text-gray">760906345675</h6>
+                      
                       <p class="card-description">
-                          Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
+                          <strong>ID number:</strong> <br />
+                          <strong>Email:</strong> <br />
+                          <strong>Cellphone:</strong> <br />
+                          <strong>Course:</strong> <br />
+                          <strong>Amount Paid:</strong> <br />
+                          <strong>Courses:</strong> <br />
                       </p>
-                      <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a>
+                      <a href="javascript:void(0)" class="btn btn-submit btn-round">Save</a>
                   </div>
               </div>
-          </div> -->
+          </div>
       </div>
   </div>
 </div>
