--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -199,7 +199,7 @@
     &.bg-danger,
     &.card-rotate.bg-danger .front,
     &.card-rotate.bg-danger .back{
-       background: linear-gradient(60deg, $cyan-400, $cyan-600);
+       background: linear-gradient(60deg, $red-700, $red-900);
     }
 
     .card-header-rose .card-icon,
