--- a/src/assets/scss/core/cards/_card-profile.scss
+++ b/src/assets/scss/core/cards/_card-profile.scss
@@ -15,7 +15,7 @@
           margin-top: 15px;
       }
       img {
-          width: 100%;
+        //   width: 100%;
           height: auto;
       }
   }
@@ -44,5 +44,16 @@
   .card-avatar {
     max-width: 130px;
     max-height: 130px;
+    position: relative;
+    color: #fff;
+    background-color: #540107;
+    span {
+        position: absolute;
+        top: 39%;
+        left: 21%;
+        color: #fff;
+        font-size: 50px;
+        font-weight: bold;
+    }
   }
 }
