--- a/src/assets/scss/core/mixins/_sidebar-color.scss
+++ b/src/assets/scss/core/mixins/_sidebar-color.scss
@@ -50,7 +50,7 @@
 }
 
 @mixin set-background-color-button($color){
-    $color : #00bcd4;
+    $color : #b71c1c;
     li.active > a{
         background-color: $color;
         @include shadow-big-color($color);
