--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-9">
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">Registration</h4>
@@ -74,23 +74,23 @@
                         </div>
                       </div>
                           <div class="row">
-                              <div class="col-md-4">
+                              <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
                                   <input [formControlName]="fields.line1" [id]="fields.line1" matInput placeholder="Address line 1" type="text">
                                 </mat-form-field>
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
                                   <input  [formControlName]="fields.line2" [id]="fields.line2"  matInput placeholder="Address line 2" type="text">
                                 </mat-form-field>
                               </div>
-                              <div class="col-md-4">
+                              <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
                                   <input  [formControlName]="fields.postalCode" [id]="fields.postalCode" matInput placeholder="Postal Code" type="text">
                                 </mat-form-field>
                               </div>
                           </div>
-                          <button mat-raised-button type="submit" class="btn btn-submit pull-right button  btn-round"  (click)="createRegistration()">Submit</button>
+                          <button mat-raised-button type="submit" class="btn btn-submit pull-right button"  (click)="createRegistration()">Submit</button>
                           <!-- <button mat-raised-button type="submit" class="btn btn-cancel pull-right button  btn-round"  (click)="createRegistration()">Cancel</button> -->
                           
                           <div class="clearfix"></div>
@@ -98,29 +98,14 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-4">
-              <div class="card card-profile">
-                  <div class="card-avatar">
-                      <a href="javascript:void(0)">
-                        <span>TM</span>
-                          <img class="img" src="./assets/img/faces/marc.jpg" />
-                      </a>
-                  </div>
-                  <div class="card-body">
-                    <h4 class="card-title">Thabo Makwea</h4>
-                      <h6 class="card-category text-gray">760906345675</h6>
-                      
-                      <p class="card-description">
-                          <strong>ID number:</strong> <br />
-                          <strong>Email:</strong> <br />
-                          <strong>Cellphone:</strong> <br />
-                          <strong>Course:</strong> <br />
-                          <strong>Amount Paid:</strong> <br />
-                          <strong>Courses:</strong> <br />
-                      </p>
-                      <a href="javascript:void(0)" class="btn btn-submit btn-round">Save</a>
-                  </div>
-              </div>
+          <div class="col-md-3">
+            <div class="card">
+              <ul class="mt-3 unstyled list-group">
+                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new registration</a></li>
+                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a registration</a></li>
+                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all registrations</a></li>
+              </ul>
+            </div>   
           </div>
       </div>
   </div>
