--- a/src/assets/scss/core/_navbar.scss
+++ b/src/assets/scss/core/_navbar.scss
@@ -120,6 +120,7 @@
         padding: $padding-general-y 0;
         font-weight: 300;
         margin-left: 1rem;
+        font-weight: bold;
     }
 
     > .container {
