--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -374,39 +374,54 @@
                   </div>
                   <div class="card-body table-responsive">
                       <table class="table table-hover">
-                          <thead class="text-danger">
+                          <thead class="">
                               <th>ID</th>
                               <th>Name</th>
-                              <th>Salary</th>
-                              <th>Country</th>
+                              <th>Surname</th>
+                              <th>Course</th>
                           </thead>
                           <tbody>
                               <tr>
                                   <td>1</td>
-                                  <td>Dakota Rice</td>
-                                  <td>$36,738</td>
-                                  <td>Niger</td>
+                                  <td>Dakota</td>
+                                  <td>Moses</td>
+                                  <td>Security 1</td>
                               </tr>
                               <tr>
                                   <td>2</td>
-                                  <td>Minerva Hooper</td>
-                                  <td>$23,789</td>
-                                  <td>Curaçao</td>
+                                  <td>Minerva</td>
+                                  <td>Hooper</td>
+                                  <td>Security 2</td>
                               </tr>
                               <tr>
                                   <td>3</td>
-                                  <td>Sage Rodriguez</td>
-                                  <td>$56,142</td>
-                                  <td>Netherlands</td>
+                                  <td>Sag</td>
+                                  <td>Rodriguez</td>
+                                  <td>Trainging 1</td>
                               </tr>
                               <tr>
                                   <td>4</td>
-                                  <td>Philip Chaney</td>
-                                  <td>$38,735</td>
-                                  <td>Korea, South</td>
+                                  <td>Philip</td>
+                                  <td>Chaney</td>
+                                  <td>Training 2</td>
                               </tr>
                           </tbody>
                       </table>
+                  </div>
+                  <div class="card-footer d-flex justify-content-center">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-end">
+                          <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1">Previous</a>
+                          </li>
+                          <li class="page-item"><a class="page-link" href="#">1</a></li>
+                          <li class="page-item"><a class="page-link" href="#">2</a></li>
+                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                          </li>
+                        </ul>
+                      </nav>
                   </div>
               </div>
           </div>
