html templates and styling

--- a/src/app/branches-all/registration-all.component.html
+++ b/src/app/branches-all/registration-all.component.html
@@ -2,24 +2,9 @@
     <div class="container-fluid">
          <div class="row">
             <div class="col-md-9">
-                <form class="navbar-form">
-                    <div class="input-group no-border">
-                        <input type="text" value="" class="form-control" placeholder="Search..." (change)="search()">
-                        <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
-                            <i class="material-icons">search</i>
-                            <div class="ripple-container"></div>
-                        </button>
-                    </div>
-                </form>
-                <div class="card d-none">
-                    <div class="card-body">
-                        <h3>No registrations found</h3>
-                        <p>Use the search bar to start searching for a registration</p>
-                    </div>   
-                </div>
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Search results for: </h4>
+                        <h4 class="card-title">All registrations </h4>
                         <p class="card-category">New registrations on September, 2023</p>
                     </div>
                     <div class="card-body table-responsive">
