--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -120,9 +120,9 @@
             <div class="col-md-3">
                 <div class="card">
                   <ul class="mt-3 unstyled list-group">
-                    <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new branch</a></li>
-                    <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a branch</a></li>
-                    <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all branches</a></li>
+                    <li class="list-group-item list-group-item-action"><a href="#/add-branch" class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new branch</a></li>
+                    <li class="list-group-item list-group-item-action"><a href="#/find-branch" class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a branch</a></li>
+                    <li class="list-group-item list-group-item-action"><a href="#/branches" class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all branches</a></li>
                   </ul>
                 </div>   
             </div>
