--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -101,9 +101,9 @@
           <div class="col-md-3">
             <div class="card">
               <ul class="mt-3 unstyled list-group">
-                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new registration</a></li>
-                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a registration</a></li>
-                <li class="list-group-item list-group-item-action"><a href="" class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all registrations</a></li>
+                <li class="list-group-item list-group-item-action"><a [routerLink]="'/registration'"  class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new registration</a></li>
+                <li class="list-group-item list-group-item-action"><a [routerLink]="'/find-registration'"  class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a registration</a></li>
+                <li class="list-group-item list-group-item-action"><a [routerLink]="'/all-registrations'"  class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all registrations</a></li>
               </ul>
             </div>   
           </div>
