auth and reporting

--- a/src/app/components/login/login-form.component.scss
+++ b/src/app/components/login/login-form.component.scss
@@ -1,14 +1,22 @@
-@import "../../../../themes/generated/variables.base.scss";
+.login-container{
+  max-width: 400px; 
+  margin: 60px auto 0;
+}
 
-.login-header {
-  text-align: center;
-  margin-bottom: 40px;
+.error{
+  color: tomato; 
+  font-size: 12px; 
+  padding-top: 4px
+}
 
-  .title {
-    color: $base-accent;
-    font-weight: bold;
-    font-size: 30px;
-    margin: 0;
+.container-fluid {
+  margin-top: 15rem;
+  max-width :initial;
+  @media screen and (min-width: 768px) {
+   max-width: 45%;
   }
 }
 
+.colomns{
+  padding-top: 1.5rem;
+}
