reporting and auth

--- a/src/app/components/branches/branches-all/branches-all.component.html
+++ b/src/app/components/branches/branches-all/branches-all.component.html
@@ -14,7 +14,7 @@
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
-                                    <i class="material-icons">date_range</i> Last {{branch.lastUpdate | date: 'dd/MM/yyyy'}}
+                                    <i class="material-icons">date_range</i> Last {{branch.lastUpdate | date: 'dd/MM/yyyy, h:mm a'}}
                                 </div>
                             </div>
                         </div>
