--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -465,7 +465,7 @@
     .stats{
       color: #999999;
       font-size: 12px;
-      line-height: 22px;
+     // line-height: 22px;
 
       .card-category{
         padding-top: 7px;
