--- a/src/app/components/course/manage-course/manage-course.component.html
+++ b/src/app/components/course/manage-course/manage-course.component.html
@@ -7,12 +7,26 @@
                         <h4 class="card-title">Edit Course</h4>
                     </div>
                     <div class="card-body">
-                        <form [formGroup]="courseForm">
+                        <form [formGroup]="courseUpdateForm">
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <mat-label>Select Course </mat-label>
+                                        <mat-label>Select Branch </mat-label>
                                         <mat-select required>
+                                            <mat-option *ngFor="let branch of Branch" [value]="branch.name"
+                                                (click)="validateBranchSelection(branch)">{{branch.name}}</mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+
+                                </div>
+
+                            </div>
+                            <div class="row">
+
+                                <div class="col-md-6">
+                                    <mat-form-field class="example-full-width">
+                                        <mat-label>Select Course </mat-label>
+                                        <mat-select required  [formControlName]="fields.course" [id]="fields.course">
                                             <mat-option *ngFor="let course of Course" [value]="course.name"
                                                 (click)="validateCourseSelection(course)">{{course.name}}</mat-option>
                                         </mat-select>
@@ -44,33 +58,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.additionalDescription" [id]="fields.additionalDescription"  [value]="additionalDescription" matInput
-                                            placeholder="Additional Description" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.firearm" [id]="fields.firearm"  [value]="firearm" matInput
-                                            placeholder="Firearm" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.grade" [id]="fields.grade"  [value]="grade" matInput
-                                            placeholder="Grade" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
                                         <input [formControlName]="fields.price" [id]="fields.price"  [value]="price" matInput
                                             placeholder="Price" type="number" required>
                                     </mat-form-field>
                                 </div>
                             </div>
+                           
                             <button mat-raised-button type="submit" (click)="Update()"
                                 class="btn btn-info pull-right button">Update</button>
                             <div class="clearfix"></div>
@@ -79,10 +72,14 @@
                 </div>
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Add Course</h4>
+                        <h4 class="card-title">Add Course </h4>
                     </div>
                     <div class="card-body">
-                        <form [formGroup]="courseForm">
+                        <div *ngIf="selectedBranch">
+                            <p>Selected branch <strong>{{selectedBranch?.name}}</strong></p>
+                        </div>
+                      
+                        <form [formGroup]="courseSaveForm">
                           
                             <div class="row">
                                 <div class="col-md-6">
@@ -101,39 +98,18 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.courseDuration" [id]="fields.courseDuration" matInput
+                                        <input [formControlName]="fields.courseDuration"  [id]="fields.courseDuration" matInput
                                             placeholder="Course Duration" type="text" required>
                                     </mat-form-field>
-                                </div>
+                                </div> 
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.additionalDescription" [id]="fields.additionalDescription"   matInput
-                                            placeholder="Additional Description" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.firearm" [id]="fields.firearm"   matInput
-                                            placeholder="Firearm" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.grade" [id]="fields.grade"   matInput
-                                            placeholder="Grade" type="text" required>
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                        <input [formControlName]="fields.price" [id]="fields.price"  matInput
+                                        <input [formControlName]="fields.price" [id]="fields.price"   matInput
                                             placeholder="Price" type="number" required>
                                     </mat-form-field>
                                 </div>
                             </div>
+                            
                             <button mat-raised-button type="submit" (click)="Save()"
                                 class="btn btn-info pull-right button">Save</button>
                             <div class="clearfix"></div>
