--- a/src/app/components/spinner/spinner-overlay.component.scss
+++ b/src/app/components/spinner/spinner-overlay.component.scss
@@ -1,16 +1,28 @@
-.spinner-wrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
+.spinner-progress {
     display: flex;
-    justify-content: center;
     align-items: center;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.5);
-    z-index: 998;
-    app-spinner-overlay {
-        width: 6rem;
-        height: 6rem;
+    justify-content: center;
+    position: fixed;
+    background: black;
+    inset: 0;
+    z-index: 999999;
+
+    .spinner {
+      position: relative;
+      border: 4px solid black;
+      border-bottom-color: transparent;
+      width: 64px;
+      aspect-ratio: 1;
+      border-radius: 100%;
+      animation: rotate 0.75s linear infinite;
     }
-}
+
+    @keyframes rotate {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  }
